--- a/Automation/automation_output/page_source_20251116_034632.html
+++ b/Automation/automation_output/page_source_20251116_034632.html
@@ -9,7 +9,7 @@
     <form id="regForm" novalidate="">
       <h1>Registration Form</h1>
 
-      <div id="topAlert" class="alert" role="alert" aria-live="assertive" style="display: none;"></div>
+      <div id="topAlert" class="alert success" role="alert" aria-live="assertive" style="display: block;">Registration Successful! Your profile has been submitted successfully.</div>
 
       <div class="row">
         <div class="field">
@@ -42,17 +42,17 @@
       <div class="row">
         <div class="field">
           <label for="country">Country *</label>
-          <select id="country" required=""><option value="">-- Select Country --</option><option value="IN">India</option><option value="US">United States</option><option value="GB">United Kingdom</option></select>
+          <select id="country" required=""><option value="">-- Select Country --</option><option value="IN">India</option><option value="US">United States</option><option value="GB">United Kingdom</option><option value="CA">Canada</option></select>
           <small class="error" id="countryErr"></small>
         </div>
         <div class="field">
           <label for="state">State *</label>
-          <select id="state" required=""><option value="">-- Select State --</option><option value="Telangana">Telangana</option><option value="Karnataka">Karnataka</option></select>
+          <select id="state" required=""><option value="">-- Select State --</option></select>
           <small class="error" id="stateErr"></small>
         </div>
         <div class="field">
           <label for="city">City *</label>
-          <select id="city" required=""><option value="">-- Select City --</option><option value="Hyderabad">Hyderabad</option><option value="Warangal">Warangal</option><option value="Nizamabad">Nizamabad</option></select>
+          <select id="city" required=""><option value="">-- Select City --</option></select>
           <small class="error" id="cityErr"></small>
         </div>
       </div>
@@ -61,10 +61,10 @@
         <div class="field">
           <label for="phone">Phone Number *</label>
           <div class="phoneRow">
-            <select id="phoneCode" aria-label="country code"><option value="">-- Select Code --</option><option value="+91">India (+91)</option><option value="+1">United States (+1)</option><option value="+44">United Kingdom (+44)</option></select>
-            <input id="phone" name="phone" type="tel" required="" placeholder="e.g., +91xxxxxxxxxx or xxxxxxxxxx">
+            <select id="phoneCode" aria-label="country code"><option value="">-- Select Code --</option><option value="+91">India (+91)</option><option value="+1">United States (+1)</option><option value="+44">United Kingdom (+44)</option><option value="+1">Canada (+1)</option></select>
+            <input id="phone" name="phone" type="tel" required="" placeholder="e.g., +91xxxxxxxxxx or xxxxxxxxxx" class="">
           </div>
-          <small class="error" id="phoneErr"></small>
+          <small class="error" id="phoneErr" style="display: block;"></small>
         </div>
 
         <div class="field">
@@ -90,8 +90,8 @@
           <label for="password">Password *</label>
           <input id="password" type="password" required="">
           <div class="pwdWrap">
-            <div id="pwdMeter"><div id="pwdMeterBar" style="width: 100%; background: linear-gradient(90deg, rgb(178, 245, 234), rgb(46, 204, 113));"></div></div>
-            <div id="pwdText" class="pwdText">Strength: Strong</div>
+            <div id="pwdMeter"><div id="pwdMeterBar" style="width: 0%; background: linear-gradient(90deg, rgb(255, 107, 107), rgb(255, 159, 159));"></div></div>
+            <div id="pwdText" class="pwdText">Strength: Weak</div>
           </div>
           <small class="error" id="passwordErr"></small>
         </div>
